<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_authentication"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_olive"
    tools:context=".EmailPasswordActivity">


    <EditText
        android:id="@+id/et_email"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_above="@+id/et_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="145dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/prompt_email"
        android:textColorHint="@color/grey"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="250dp"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textColorHint="@color/grey"
        android:textSize="30dp" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="160dp"
        android:layout_weight="1"
        android:backgroundTint="@color/light_orange"
        android:text="@string/action_sign_in"
        android:textColor="@color/brown"
        app:cornerRadius="10dp"
        app:strokeColor="#000000" />

    <Button
        android:id="@+id/btn_registration"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="210dp"
        android:layout_marginLeft="210dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="160dp"
        android:layout_weight="1"
        android:backgroundTint="@color/light_orange"
        android:text="@string/action_registration"
        android:textColor="@color/brown"
        app:cornerRadius="10dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="117dp"
        android:layout_marginRight="117dp"
        android:text="@string/app_name"
        android:textColor="@color/brown"
        android:textSize="60sp" />

</RelativeLayout>